--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -57,7 +57,7 @@ log4j.logger.java.sql.Statement=error
 log4j.logger.java.sql.PreparedStatement=debug
 log4j.logger.java.sql.ResultSet=error
 
-#wangjinfeng print sql in mybatis
+#print sql in mybatis
 log4j.logger.mvc=DEBUG
 
 
